--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
+    "react-tweet": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0"
+    "gh-pages": "^6.1.1"
   }
 }
