--- a/package.json
+++ b/package.json
@@ -4,17 +4,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1594.0",
+    "axios": "^1.6.7",
+    "buffer": "^6.0.3",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "emailjs-com": "^3.2.0",
+    "express": "^4.19.2",
+    "formik": "^2.4.5",
     "google-maps": "^4.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^4.12.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "react-tweet": "^3.2.0",
+    "react-twitter-embed": "^4.0.4",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +61,14 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
-  }
+    "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
+  },
+  "description": "The dazzling and innocuous colors of cyanobacteria blooms do not fully reveal just how toxic they can be. Sometimes, a full-scale problem may not be visually noticeable. Droughts and extreme agricultural run-off can lead to an explosive growth of toxic cyanobacteria, forming a blanket of scum that prevents light from reaching deeper into the water column and degrading aquatic habitats, and creating low or depleted oxygen in a water body. The global proliferation of CyanoHABs have presented a major risk to the public and wildlife, and ecosystem and economic services provided by inland water resources (Image source: Dr.Susan Wilde, UGA).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
