--- a/package.json
+++ b/package.json
@@ -6,30 +6,44 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
     "@react-google-maps/api": "^2.19.2",
+    "@supabase/supabase-js": "^2.45.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-sdk": "^2.1594.0",
-    "axios": "^1.6.7",
+    "axios": "^1.7.2",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
+    "countapi-js": "^1.0.2",
     "csv-parser": "^3.0.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.19.2",
     "formik": "^2.4.5",
     "google-maps": "^4.3.3",
+    "leaflet": "^1.9.4",
+    "lodash.throttle": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-grid-gallery": "^1.0.1",
     "react-icons": "^4.12.0",
+    "react-image-gallery": "^1.3.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-lazyload": "^3.2.1",
+    "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
+    "react-modal-image": "^2.6.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-tweet": "^3.2.0",
     "react-twitter-embed": "^4.0.4",
+    "slick-carousel": "^1.8.1",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
