--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "leaflet": "^1.9.4",
     "lodash.throttle": "^4.1.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-grid-gallery": "^1.0.1",
